<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.android.layoutandgpa.Order">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurantReservation"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elapsedTime"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:visibility="invisible"/>
        <Chronometer
            android:id="@+id/chr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:visibility="invisible"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <DatePicker
            android:id="@+id/dPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_marginTop="60dp"
            android:visibility="invisible">
        </DatePicker>
        <TimePicker
            android:id="@+id/tPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:timePickerMode="spinner"
            android:visibility="invisible">
        </TimePicker>
        <GridLayout
            android:id="@+id/gLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="2"
            android:padding="80dp"
            android:layout_marginTop="40dp"
            android:visibility="invisible">
            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adult"/>
            <EditText
                android:id="@+id/e1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:textSize="12sp"
                android:hint="@string/hint1"
                android:inputType="number"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/child"
                android:layout_marginTop="30dp"/>
            <EditText
                android:id="@+id/e2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:textSize="12sp"
                android:hint="@string/hint2"
                android:inputType="number"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"/>
        </GridLayout>
        
        <GridLayout
            android:id="@+id/g2Layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="4"
            android:padding="50dp"
            android:visibility="invisible">

            <TextView
                android:text="@string/confirm"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:textColor="#96C0B7"
                android:textStyle="bold"
                android:typeface="serif"
                android:textSize="18sp"
                android:background="#11FEF6C9"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/text4"
                android:layout_columnSpan="2"
                android:layout_marginTop="20dp"
                android:text="@string/date"
                android:layout_gravity="fill"
                android:typeface="serif"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#D4DFC7"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/text5"
                android:layout_columnSpan="2"
                android:layout_marginTop="20dp"
                android:text="@string/time"
                android:layout_gravity="fill"
                android:typeface="serif"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#D4DFC7"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/text6"
                android:layout_columnSpan="2"
                android:layout_marginTop="20dp"
                android:text="@string/cAdult"
                android:layout_gravity="fill"
                android:typeface="serif"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#D4DFC7"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/text7"
                android:layout_columnSpan="2"
                android:layout_marginTop="20dp"
                android:text="@string/cChild"
                android:layout_gravity="fill"
                android:typeface="serif"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#D4DFC7"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_columnSpan="2"
                android:layout_marginTop="10dp"
                android:text="@string/thank"
                android:layout_gravity="fill"
                android:textColor="#96C0B7"
                android:textStyle="bold"
                android:typeface="serif"
                android:textSize="17sp"
                android:gravity="center_horizontal"/>
        </GridLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/lLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            android:layout_weight="1"
            style="?buttonBarButtonStyle"
            android:textStyle="bold"
            android:background="#22FFFFFF"
            android:onClick="onButton" />
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:layout_weight="1"
            style="?buttonBarButtonStyle"
            android:background="#22FFFFFF"
            android:onClick="onButton" />
    </LinearLayout>
</LinearLayout>
