<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.layoutandgpa.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:typeface="serif"
        android:textSize="30sp"
        android:textColor="#B9314F"/>

    <Button
        android:id="@+id/layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/layout"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />
    <Button
        android:id="@+id/gpa"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/gpa"
        android:layout_centerInParent="true"
        android:layout_below="@+id/layout"
        android:layout_marginTop="40dp"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Order"
        android:layout_centerInParent="true"
        android:layout_below="@+id/gpa"
        android:layout_marginTop="40dp"/>
    <TextClock
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:format12Hour="hh:mm a" />

</RelativeLayout>
